EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------

==10/12/2008
Derision: No more binding wounds while feigning death.
Derision: (Rocker8956) Movegrp quest command fix.
Derision: (LeftRoad) TEMPORARY(NORENT) items in a character inventory will be retained if you log back into that character within 30 minutes.

==10/11/2008
Derision: Resurrection fix.
KLS: Rebalanced skill ups.

==10/10/2008
AndMetal: Added functions to calculate AA bonuses just like item & spell bonuses (not turned on yet)
Condgar: Fix for Bots wont Attack
Congdar: Fix low level bots hitting too hard
Derision: Prevent two instances of possible zone crashes due to null pointers.
Trevius: (Striat) Added quest commands for zone and world emotes - quest::ze() & quest::we()
Derision: Recalculate Pet bonuses on zoning before setting current HP/Mana.

==10/09/2008
Congdar: Replace Client IsEngaged() checks in Bot Source with bot aggro check
Trevius: (AndMetal) Added quest Object SetOOCRegen() to adjust NPC Out of Combat Regen on the fly.
Trevius: Relocated the Empty Corpse check code so that the Decay Time rule for it will now work.
Trevius: Removed the Level 70 cap on the #traindisc <level> command.
Trevius: Added optional rule to allow Max Level Attainable via experience to be set independant of other Max Level rule checks.
Derision: Reworked code to stop mobs fleeing if they have buddies to account for recent hate_list changes.

Optional SQL:
Insert into rule_values values (0, 'Character:MaxExpLevel', 0);

==10/08/2008
Congdar: Fix orphaned bots when camping/zoning
Congdar: Link bot assist with client auto attack
Derision: Added #titlesuffix command to add a title after a player's name.

==10/07/2008
Congdar: Allow bot pets to be the main tank in a bot raid
Congdar: Remove old Sense Heading skill check
AndMetal: Web interface will now list open petitions.